update ok/fjx/fjx04-0.11.0.0.0.md. 其中以肉洼之温  “洼”改为“桂” 白头翁黄柏  之间加、 而初起治法皆可通因通用  后加， 调气则后重启除  “启除”改为“自除”

--- a/ok/fjx/fjx04-0.11.0.0.0.md
+++ b/ok/fjx/fjx04-0.11.0.0.0.md
@@ -4,14 +4,14 @@
 
 〔服法〕㕮咀，每服半两，水二盏煎至一盏，食后温服。清如血痢，则渐加大黄，如汗后脏毒加黄柏半两，依前服。（水煎服）
 
-〔讲解〕本方系由黄芩汤（黄芩、芍药、甘草、大枣）去大枣合泻心汤加味所组成。系治湿热留连发生赤白痢疾之方。湿热疫毒下注大肠，气机壅滞，故腹痛后重，泻而不爽；热伤肠络，气血与湿热疫毒相搏，酝久化脓，故下痢赤白，脓血相兼；热毒下迫，故下痢灼肛，小便短赤。方内重用芍药为君以调和血气，止腹痛下痢后重，故以名方。臣以黄连、黄芩、大黄清热解毒，祛湿热，导滞下行。佐以当归、肉桂和营行血，行血则便脓自愈，其中以肉洼之温，监制芩连之苦寒，以免寒凉碍邪，更佐木香、槟榔调气导滞，破坚消积，使气调则后重自除。使以甘草调和诸药。方中芍药配甘草能缓急止痛，大黄配槟榔，荡热去积一血一气，气血并调，使疫毒从大便而泄，体现“通因通用”。大黄得肉桂，行血之力更强，肉桂得大黄，则无助火之弊。统观全方有清热解毒、调气和血之效。
+〔讲解〕本方系由黄芩汤（黄芩、芍药、甘草、大枣）去大枣合泻心汤加味所组成。系治湿热留连发生赤白痢疾之方。湿热疫毒下注大肠，气机壅滞，故腹痛后重，泻而不爽；热伤肠络，气血与湿热疫毒相搏，酝久化脓，故下痢赤白，脓血相兼；热毒下迫，故下痢灼肛，小便短赤。方内重用芍药为君以调和血气，止腹痛下痢后重，故以名方。臣以黄连、黄芩、大黄清热解毒，祛湿热，导滞下行。佐以当归、肉桂和营行血，行血则便脓自愈，其中以肉桂之温，监制芩连之苦寒，以免寒凉碍邪，更佐木香、槟榔调气导滞，破坚消积，使气调则后重自除。使以甘草调和诸药。方中芍药配甘草能缓急止痛，大黄配槟榔，荡热去积一血一气，气血并调，使疫毒从大便而泄，体现“通因通用”。大黄得肉桂，行血之力更强，肉桂得大黄，则无助火之弊。统观全方有清热解毒、调气和血之效。
 
 〔临证应用〕本方为治湿热下痢常用方剂。主要以痢下赤白，腹痛里急后重，便脓血，苔腻微黄为应用要点。痢疾初起有表证者不宜使用。
 
-如苔黄干，热甚伤津者，可去肉桂加丹皮、赤芍以增强凉血清热之效。苔根厚腻，脉滑，兼食滞，可去甘草，加焦楂炭以消食止痢；毒热重纯下赤冻，可去当归、芍药，加银花炭、白头翁黄柏、赤芍以清热凉血、坚阴止痢。腹胀满，气滞较重，可去肉桂、甘草，加枳壳以行气导滞。病初起，体实证实可用赤芍而可用白芍。兼暑湿表证可加煨葛根、藿香，佩兰以芳化湿浊、解表止痢。挾白痢可加炮姜炭或干姜以寒热并用。
+如苔黄干，热甚伤津者，可去肉桂加丹皮、赤芍以增强凉血清热之效。苔根厚腻，脉滑，兼食滞，可去甘草，加焦楂炭以消食止痢；毒热重纯下赤冻，可去当归、芍药，加银花炭、白头翁、黄柏、赤芍以清热凉血、坚阴止痢。腹胀满，气滞较重，可去肉桂、甘草，加枳壳以行气导滞。病初起，体实证实可用赤芍而可用白芍。兼暑湿表证可加煨葛根、藿香，佩兰以芳化湿浊、解表止痢。挾白痢可加炮姜炭或干姜以寒热并用。
 
 湿热泄泻，泄下不爽，肛门灼热，腹痛拒按，苔黄腻根厚，脉滑数者，也可用本方加减治疗。
 
 本方与白头翁汤（白头翁、黄柏、黄连、秦皮）均能治痢，然本方治湿热蕴结，气血瘀滞之痢，为清热解毒燥湿，行血调气，标本兼顾之方。白头翁汤为治湿热邪毒赤痢或疫毒痢，偏于热毒较盛者。具清热解毒、凉血止痢之效。
 
-〔方论选录〕张秉成：“夫痢之为病，故有寒热之分，然热者多而寒者少，总不离邪滞蕴结，以致肠胃之气不宣，酿为脓血稠粘之属，虽有赤白之分，寒热之别，而初起治法皆可通因通用故刘河间有云：行血则便脓自愈，调气则后重启除，二语足为治痢之大法。此方用大黄之荡涤邪滞，木香槟榔之理气，当归肉桂之行血；病多因湿热而起，故用芩连之苦寒以燥湿清热；用芍药甘草者，缓其急而和其脾，仿小建中之意，小小建立中气耳。至若因病加减之法，则又在于临时制宜也。”（《成方便读》）
+〔方论选录〕张秉成：“夫痢之为病，故有寒热之分，然热者多而寒者少，总不离邪滞蕴结，以致肠胃之气不宣，酿为脓血稠粘之属，虽有赤白之分，寒热之别，而初起治法皆可通因通用，故刘河间有云：行血则便脓自愈，调气则后重自除，二语足为治痢之大法。此方用大黄之荡涤邪滞，木香槟榔之理气，当归肉桂之行血；病多因湿热而起，故用芩连之苦寒以燥湿清热；用芍药甘草者，缓其急而和其脾，仿小建中之意，小小建立中气耳。至若因病加减之法，则又在于临时制宜也。”（《成方便读》）
