--- a/ok/gl/gl03-0.5.0.0.0.md
+++ b/ok/gl/gl03-0.5.0.0.0.md
@@ -26,7 +26,7 @@
 
 （6）手少阳之别络名[外关](https://www.gmzyjc.com/read/zjs/zjs3.1.9-12-0.0.2.3.5.md)：从[外关](https://www.gmzyjc.com/read/zjs/zjs3.1.9-12-0.0.2.3.5.md)穴处分出，在腕后二寸处，绕行于臂膊外侧，进入胸中，与手厥阴经会合。
 
-（7）足太阳之别络名飞扬：从[飞阳](https://www.gmzyjc.com/read/zjs/zjs3.1.7-8-0.0.1.3.58.md)穴处分出，在外踝上七寸处，走向足少阴经。
+（7）足太阳之别络名飞扬：从[飞扬](https://www.gmzyjc.com/read/zjs/zjs3.1.7-8-0.0.1.3.58.md)穴处分出，在外踝上七寸处，走向足少阴经。
 
 （8）足少阳之别络名光明：从光明穴处分出，在外踝上五寸处，走向足厥阴经，向下联络足背。
 
