--- a/ok/ek/ek0zl05-0.5.0.0.0.md
+++ b/ok/ek/ek0zl05-0.5.0.0.0.md
@@ -2,7 +2,7 @@
 
 按诊是抚按小儿头、颈、胸、背、腹、胁、四肢、体表等部位，以诊察其生长发育情况，并诊其冷热、软硬、凹凸、淋巴节等程度，以帮助对寒热虚实的诊断。
 
-（一）按颅囟 小儿在18个月内，颅囟未合，按之柔软，稍为凹陷，这是生理常态。若凹陷如坑，称为囟陷，多属先天禀赋不足，或久病慢惊泄利，阳气不充所致。按《全幼心鉴》所载：凡小儿半岁之际，有病当于前额、眉端、发际之间，以无名、中、食三指曲按之，以测体温之微甚。一岁至半岁之前，囟多未闭，平或微陷，逾期不闭，或不按期渐闭，加之方颅，多属先天不足，后天失调，多见于佝偻病，营养不良等。头大而颅骨缝裂开为解颅（相当于脑积水）。前囟高起而紧张，伴颈项强直，多火热上冲，肝风欲动，为热证。囟门隆起压力高，称囟填，多属水热上冲。亦有由寒凝气滞所致者，应予鉴别。囟门明显凹陷为津液不足和中气下陷，属虚证，且多为重证。
+（一）按颅囟 小儿在18个月内，颅囟未合，按之柔软，稍为凹陷，这是生理常态。若凹陷如坑，称为囟陷，多属先天禀赋不足，或久病慢惊泄利，阳气不充所致。按《全幼心鉴》所载：凡小儿半岁之际，有病当于前额、眉端、发际之间，以无名、中、食三指曲按之，以测体温之微甚。一岁至半岁之前，囟多未闭，平或微陷，逾期不闭，或不按期渐闭，加之方颅，多属先天不足，后天失调，多见于佝偻病，营养不良等。头大而颅骨缝裂开为解颅（相当于脑积水）。前囟高起而紧张，伴颈项强直，多火邪上冲，肝风欲动，为热证。囟门隆起压力高，称囟填，多属火热上冲。亦有由寒凝气滞所致者，应予鉴别。囟门明显凹陷为津液不足和中气下陷，属虚证，且多为重证。
 
 （二）按颈腋 颈项、腋下等处，有许多小的结节，质软不粘连，是正常状态。若结节肿大，伴发热压痛，则为痰毒；若病程迁延，结节大小不等。连珠成串，质地较硬，推之不易活动，则为瘰疬。颈动脉（人迎脉）搏动明显可见，为心脏病、哮喘病、水肿病危重之候。
 
@@ -26,7 +26,7 @@
 
 4.小儿切脉，主要以浮、沉、迟、数，辨表、里、寒、热，以有力无力而别虚实。按诊，主要按头、胸、背、腹、胁、四肢，体表等部位，以诊察其生长发育情况，并触知其冷、热、软、硬、凹、凸等程度，以辨别寒、热、虚、实。
 
-5.根据四诊所搜集的证候，按五脏所主加以分析归纳，而进行五脏辨证、这可以帮助对脏腑病变的认识。
+5.根据四诊所搜集的证候，按五脏所主加以分析归纳，而进行五脏辨证。这可以帮助对脏腑病变的认识。
 
 儿科诊断学与其他各科同样，必须四诊合参，才能全面。
 
@@ -34,6 +34,6 @@
 
 1.述明望诊在儿科诊断中的意义及其具体内容与方法。
 
-2.闻诊、问诊，切诊在儿科诊断中有何特殊的内容？
+2.闻诊、问诊、切诊在儿科诊断中有何特殊的内容？
 
 3.简述儿科诊断学的特点。
