update ok/fjx/fjx04-0.12.0.0.0.md. （《丹溪心法》),   ,改为，

--- a/ok/fjx/fjx04-0.12.0.0.0.md
+++ b/ok/fjx/fjx04-0.12.0.0.0.md
@@ -10,6 +10,6 @@
 
 〔临床应用〕本方主治湿热蕴结下焦，气化失调，小便闭而不通，小腹胀满。还治下焦阴虚，脚膝软弱，阴汗阴痿，足热不能踏地，或神水将枯，眼睛突出。
 
-本方去肉桂，加熟地、龟板、猪脊髓则名大补阴丸（《丹溪心法》),主治肝肾阴虚，虚火上炎。症见骨蒸潮热，盗汗，咳嗽咯血，吐血，或烦热易饥，足膝疼热，舌红少苔，尺脉数而有力。
+本方去肉桂，加熟地、龟板、猪脊髓则名大补阴丸（《丹溪心法》)，主治肝肾阴虚，虚火上炎。症见骨蒸潮热，盗汗，咳嗽咯血，吐血，或烦热易饥，足膝疼热，舌红少苔，尺脉数而有力。
 
 本方与大补阴丸中都有知母、黄柏以清相火，然大补阴丸配大量滋阴药以滋阴降火，本方则配肉桂以化气利小便，此为两方不同之处。
