update ok/gl/gl05-0.3.2.1.0.md. 根据扫描版插入“的”字，并改正1个标点。

--- a/ok/gl/gl05-0.3.2.1.0.md
+++ b/ok/gl/gl05-0.3.2.1.0.md
@@ -10,7 +10,7 @@
 
 但热不寒，是指病人身热恶热而不恶寒；自觉发热；或只见五心烦热等。发热原因很多，总可分为外感与内伤两大类。外感发热，一般发病急，热势高，且初起多见发热恶寒之表证，在表邪入里后，即表现为但热不寒；内伤发热，一般发病缓慢，热势不高，且初起无发热恶寒兼见之表证存在。
 
-壮热：即大热、盛热，手按病人肌肤而有烫手的感觉，且久按热感不减，多兼见口渴面赤气粗等称为壮热。外感病壮热，见于伤寒为风寒之邪入里化热，如阳明经证和腑证；见于温病为热邪内传气分、血分等，如风温，热邪犯肺；湿温、暑温邪在气分；及温病热入营血。内伤壮热，见于宿食所伤，为夜间热甚。壮热之症为里热实证，为正盛邪实，邪正剧争表现。
+壮热：即大热、盛热，手按病人肌肤而有烫手的感觉，且久按热感不减，多兼见口渴面赤气粗等称为壮热。外感病壮热，见于伤寒为风寒之邪入里化热，如阳明经证和腑证；见于温病为热邪内传气分、血分等，如风温，热邪犯肺；湿温、暑温邪在气分；及温病热入营血。内伤壮热，见于宿食所伤，为夜间热甚。壮热之症为里热实证，为正盛邪实，邪正剧争的表现。
 
 潮热：是发热之微甚作止均有定时，有如潮水之来，一日一发，多发于午后。若日发二次以上者，即非潮热。潮热有外感内伤之分，虚实之别。外感为实，内伤多虚。外感：伤寒阳明腑实证，为日晡潮热，兼见腹满痛拒按，大便燥结，手足汗出，舌苔黄燥等燥热内结之证；温病热入营血发热夜甚及温病后期余邪伏于阴分之夜热早凉。温病湿温证，为午后潮热（午后热甚），但身热不扬，初按肌肤不觉甚热，久按则灼手，是热为湿邪阻遏，难以透达于外所致，多兼见胸闷呃恶，身重便溏，苔腻以及暑热伤气等。内伤潮热，多见于气虚、阴虚、虚损证（肝、肺、肾阴虚等）、血虚、血瘀，气郁等。内伤潮热，有时有热自骨发之感（骨蒸潮热）。内伤以阴虚，气虚为多见。阴虚者多伴有五心烦热、盗汗、颧赤、舌红少津等；气虚者如脾胃气虚下陷的发热，肾气虚不能引火归元的发热，则潮热见于清晨，伴有自汗，或动则汗出，少气，乏力，面色㿠白等症状，且遇劳则甚。清•张石顽等还指出内伤之痰饮、宿食皆可出现潮热症状。内伤潮热，病势缓，热势不甚而病程长。
 
@@ -20,7 +20,7 @@
 
 3、恶寒发热
 
-恶寒（恶风）发热是恶风寒与发热同时兼见。多见于外感，为外感表证的特点；是表阳与外邪相争的反映。仅就恶寒来说，内伤之恶寒，病势缓而长，得暖则减，且不兼见全身发热（不包括真寒假热）；外感之恶寒，病势急，病程短，得暖不减，重者多伴有寒战，恶寒之后旋即发热。外感病包括伤寒与温病，二者初起均有恶寒发热之表证。但伤寒表证之恶寒，时间长，恶寒也重，且多无汗；温病系外感温热之邪，其表证恶寒轻而短暂，旋即发热不恶寒而恶热，且伴有不同程度的口渴自汗等症状。伤寒厥阴病的寒热胜负，是邪正斗争孰胜孰负的反映。寒多热少为正负邪胜，为病进；热多寒少为正胜邪负，为病退。总之，恶寒发热是外感表证的根据。若内伤病而见发热恶寒，则或为内伤兼外感，或为阴胜格阳于外而发热，即真寒假热。
+恶寒（恶风）发热是恶风寒与发热同时兼见。多见于外感，为外感表证的特点，是表阳与外邪相争的反映。仅就恶寒来说，内伤之恶寒，病势缓而长，得暖则减，且不兼见全身发热（不包括真寒假热）；外感之恶寒，病势急，病程短，得暖不减，重者多伴有寒战，恶寒之后旋即发热。外感病包括伤寒与温病，二者初起均有恶寒发热之表证。但伤寒表证之恶寒，时间长，恶寒也重，且多无汗；温病系外感温热之邪，其表证恶寒轻而短暂，旋即发热不恶寒而恶热，且伴有不同程度的口渴自汗等症状。伤寒厥阴病的寒热胜负，是邪正斗争孰胜孰负的反映。寒多热少为正负邪胜，为病进；热多寒少为正胜邪负，为病退。总之，恶寒发热是外感表证的根据。若内伤病而见发热恶寒，则或为内伤兼外感，或为阴胜格阳于外而发热，即真寒假热。
 
 4、寒热往来
 
