--- a/ok/wk/wk05.md
+++ b/ok/wk/wk05.md
@@ -16,4 +16,4 @@
 
 5.熟悉外科临床常用方剂的配伍特点。
 
-外科治疗，分内治与外治两种。内治法，基本上与内科相同，但自宋元以来，医家根据外科疾患大多可分为初起、成脓、渍后三个阶段，而逐步总结出外科内治的消、托、补三法。并多采用内外合治，形成了一套完整的治疗法则。解放后，扩大了外科治疗范围，特别是对卒腹痛的治疗，取得了良好效果，丰富了外科治法，提高了疗效。在临证时，应该依患者的体质强弱、病因异同、疾病的性质和阶段，确立内治与外治的法则。
+外科治疗，分内治与外治两种。内治法，基本上与内科相同，但自宋元以来，医家根据外科疾患大多可分为初起、成脓、溃后三个阶段，而逐步总结出外科内治的消、托、补三法。并多采用内外合治，形成了一套完整的治疗法则。解放后，扩大了外科治疗范围，特别是对卒腹痛的治疗，取得了良好效果，丰富了外科治法，提高了疗效。在临证时，应该依患者的体质强弱、病因异同、疾病的性质和阶段，确立内治与外治的法则。
