--- a/ok/wk/wk05-0.1.0.0.0.md
+++ b/ok/wk/wk05-0.1.0.0.0.md
@@ -4,7 +4,7 @@
 
 消法是用消散的药物，使初期尚未化脓的一切肿疡消于无形。《内经》中所谓“坚者消之”，"结者散之”，“留者攻之”即消法之大旨。清代医家程国彭说：“消者，去其壅也，脏腑经络之间，本无此物，而忽有之，必为消散，乃得其平。”这是治疗肿疡初期阶段的总纲。本法可使病人免受溃脓、手术之苦，而又能缩短病程，故古人有“以消为贵”的说法。具体方法有解表、清热、疏肝、祛痰、和营、行气、温通等。在临床上，一般都应用于没有成脓的肿疡，但具体用法是极其灵活的，应根据临床证候，选择治疗方法。
 
-1.清热解毒法：即用清热解毒的药物使热毒消散，得以清解的疗法。适用于痈、有头疽、疖、疔等证，不论初起、成脓、溃后，凡有实火、热毒见证者皆宜应用。在内痈中，凡热毒炽盛或热入营血之高热、烦躁不安、神昏谵语，以及邪热迫血妄行而见吐衄发斑等出血证时均可使用。这类里热证候，一般可分为气分郁热（里热轻证），毒热炽盛（里热重证），和热入营血三大类型。在皮肤病有热毒见症者，如脓庖疮、漆疮、药物性皮炎、严重的多形红斑等也均可使用。具体应用时可根据病情分别用清热解毒、清热泻火、清热凉血和养阴清热等方法。常用药物如金银花、紫花地丁、蒲公英、菊花、连翘、黄芩、黄连等。常用方剂如仙方活命饮、五味消毒饮、犀角地黄汤、白虎汤、大黄牡丹皮汤、知柏八味丸、清骨散等。
+1.清热解毒法：即用清热解毒的药物使热毒消散，得以清解的疗法。适用于痈、有头疽、疖、疔等证，不论初起、成脓、溃后，凡有实火、热毒见证者皆宜应用。在内痈中，凡热毒炽盛或热入营血之高热、烦躁不安、神昏谵语，以及邪热迫血妄行而见吐衄发斑等出血证时均可使用。这类里热证候，一般可分为气分郁热（里热轻证），毒热炽盛（里热重证），和热入营血三大类型。在皮肤病有热毒见症者，如脓疱疮、漆疮、药物性皮炎、严重的多形红斑等也均可使用。具体应用时可根据病情分别用清热解毒、清热泻火、清热凉血和养阴清热等方法。常用药物如金银花、紫花地丁、蒲公英、菊花、连翘、黄芩、黄连等。常用方剂如仙方活命饮、五味消毒饮、犀角地黄汤、白虎汤、大黄牡丹皮汤、知柏八味丸、清骨散等。
 
 2.活血祛瘀法：用活血化瘀的药物，使经络疏通，血脉流畅，而达到疮疡消散的目的。适用于肿疡初期或溃疡肿块不消，有气血凝滞之证候者。活血祛瘀法在卒腹痛中应用非常广泛，凡有瘀血见症，如舌质紫暗，有瘀斑、瘀点，腹腔肿块和局部瘀血者，皆可用之。如①各类卒腹痛的早期：急性肠痈、急性胆囊炎等。②各种类型的包块：炎性包块、出血性包块、腹腔的包裹性积液，肠痈周围脓肿、腹腔脓肿、子宫外孕的血肿包块等。③出血性疾病：子宫外孕破裂、消化道出血、血尿等。④胆道结石、石淋的排石治疗过程中均需配用活血化瘀法治疗。皮肤病中凡有瘀血症状者，如皮肤结节（结节性红斑等）、赘生物(疣、瘤等）、肿块以及局部肥厚、硬化性皮损等亦可应用。活血化瘀有行气活血、凉血活血、清热活血、通络活血等具体方法，临证时可据证选用。常用祛瘀药物有：归尾、赤芍、川芎、桃仁、红花、郁金、丹参、三棱、莪术、红藤、虎杖等。常用方剂如：桃红四物汤、少腹逐瘀汤、复元活血汤、活血散瘀汤等。
 
