--- a/ok/wk/wk02.md
+++ b/ok/wk/wk02.md
@@ -1,4 +1,4 @@
-# 第二章 病因病机&
+# 第二章 病因病机
 
 〔自学时数〕3学时
 
@@ -54,13 +54,13 @@
 
 5.暑邪：盛夏酷暑，易伤元气，耗津液。暑多挟湿，症见疖肿疼痛，甚或遍体丛生，并身热汗出，头重胸痞，渴不多饮，脉濡数，苔白腻，如暑疖、暑湿流注等。
 
-6.燥邪，燥易伤津，而津枯液耗，则肌肤干燥，搔痒脱屑，毛发干枯，如血燥血热所致的白屑风及皮肤搔痒、白庀等。
+6.燥邪：燥易伤津，而津枯液耗，则肌肤干燥，搔痒脱屑，毛发干枯，如血燥血热所致的白屑风及皮肤搔痒、白疕等。
 
 （二）感受特殊之毒
 
 外科疾病中，可因虫兽咬伤，或接触了某些特殊物质而发病。
 
-1.毒蛇、疯犬，毒蝎、蜈蚣等咬伤，直接引发蛇伤、狂犬病等，此类原因易见，症状明确，不再赘述。
+1.毒蛇、疯犬，毒蝎、蜈蚣等咬伤，直接引发蛇伤、狂犬病等。此类原因易见，症状明确，不再赘述。
 
 2.有些人因于禀赋特异，不耐接触某些物质，如羊毛、漆、荨麻、毛虫、沥青、铬酸、染料及某种药品等，经过一定时间后出现皮肤损害。轻则出现红斑、丘疹，重则出现水庖、脓庖或溃烂坏死，如漆疮、沥青疮及药疹等。
 
@@ -76,11 +76,11 @@
 
 气病以气郁、气滞、气逆和气虚为常见。
 
-1.气郁：肝性喜条达而恶抑郁，若情志不遂，或恼怒伤肝，肝气郁结；或忧思伤脾，脾失健运，痰湿内生；郁气、湿痰互阻于经络，结聚成块，渐增胀痛，全身症状有胸胁满闷，纳呆腹胀，焦躁易怒，月经失调，生气后症状加重；若气郁化火则胸胁胀痛，甚则绞痛阵作，口苦咽干，或寒战高热等。常见的乳癖、乳岩、癭瘤、瘰疬及胆石症等，多为郁所致。
+1.气郁：肝性喜条达而恶抑郁，若情志不遂，或恼怒伤肝，肝气郁结；或忧思伤脾，脾失健运，痰湿内生；郁气、湿痰互阻于经络，结聚成块，渐增胀痛，全身症状有胸胁满闷，纳呆腹胀，焦躁易怒，月经失调，生气后症状加重；若气郁化火则胸胁胀痛，甚则绞痛阵作，口苦咽干，或寒战高热等。常见的乳癖、乳岩、癭瘤、瘰疬及胆石症等，多为气郁所致。
 
 2.气滞：人身之气，聚则有形，散而无迹，腹内气机阻滞，则阵发疼痛，攻痛无常，如疝气、部分腹内痈肿等。
 
-3.气逆：胃气以降为顺，以升为逆，如果外邪滞留肠胃，胃气不能正常下行，则逆而上冲，症见腹痛、恶心、呕吐、不食，如肠结等。
+3.气逆：胃气以降为顺，以升为逆，如果外邪滞留肠胃，胃气不能正常下行，则逆而上冲，症见腹痛，恶心，呕吐，不食，如肠结等。
 
 4.气虚：气为全身之动力，以保证人体各器官的正常功能。若卫气不足则自汗，正气不足则皮肌萎缩，全身乏力；脾气不足，可致气虚下陷，常引起肛肠脱垂，形成痔疮、脱肛等疾病。
 
@@ -98,7 +98,7 @@
 
 食滞肠胃，或由素体脾胃阳虚，或因暴饮暴食而致宿食不化，症见腹痛，腹胀，烦闷不宁，恶心呕吐，嗳腐吞酸，胃脘高突，大便秘结，脉滑实，苔厚腻。
 
-"膏梁厚味，足生大丁”。饮食不节，恣食甘肥滋腻和辛辣刺激之品，可使脾胃受损，湿热火毒内生，从而发为痈疽。
+"膏梁厚味，足生大丁。”饮食不节，恣食甘肥滋腻和辛辣刺激之品，可使脾胃受损，湿热火毒内生，从而发为痈疽。
 
 （四）肝肾不足
 
@@ -112,7 +112,7 @@
 
 1.六淫致病与季节有一定关系：因时邪偏胜，袭於肌肤筋骨，即发外疡，而六气分属四季，如春天风淫所胜，则易生头面疮疡，痄腮时毒。长夏湿盛，骄阳酷烈，暑湿热交蒸，易发暑疖、暑湿流注以及其它脓肿。冬令严寒所胜，气滞血凝，易发冻疮。所以，审证求因之时，应该注意时令，考虑气候变化对人体的影响。
 
-2.外疡发病原因与发病部位有一定的关系：古人谓“头面肿为风”、“脚肿为湿"，确属经验之谈。发于人体上部（头、面、肩、项等处）的疮疡，如时毒、发颐、牙周炎、骨槽风等多为风温、风热所致；发于人体中部（胸、腹、腰、背）之外疡，如乳痈、胁疽等，多因气郁、火郁所引起；发于人体下部（臀、腿、胫、足）之外疡，如臁疮等，多由湿热或寒湿所致。又如同一种疾病，生于不同部位，其病因也不尽相同。如丹毒发于头面，则多挟风邪；发于两胁，虚肿红热者，多兼气郁；发于股胫者，则多兼湿邪，治法亦各异。又如，同为䐔病，发于胸胁者多兼气郁，发于下肢者多为湿盛。这是一般规律，在诊断时还需四诊合参，才能更加准确，但如果忽略发病部位的重要意义，治疗就不会取得预期的效果。以上病因可以单独致病，也可以几种病因同时致病，甚至同一病人、同一疾病，在不同阶段，病因不同。如同一个石淋患者，在结石固定不移时，其病因可能是气滞血瘀；在结石移动时，其病因则可能是湿热下注。所以医者临床时，必须综合局部症状与全身症状进行全面的分析，才能审证求因。
+2.外疡发病原因与发病部位有一定的关系：古人谓“头面肿为风”、“脚肿为湿"，确属经验之谈。发于人体上部（头、面、肩、项等处）的疮疡，如时毒、发颐、牙周炎、骨槽风等多为风温、风热所致；发于人体中部（胸、腹、腰、背）之外疡，如乳痈、胁疽等，多因气郁、火郁所引起；发于人体下部（臀、腿、胫、足）之外疡，如臁疮等，多由湿热或寒湿所致。又如同一种疾病，发生于不同部位，其病因也不尽相同。如丹毒发于头面，则多挟风邪；发于两胁，虚肿红热者，多兼气郁；发于股胫者，则多兼湿邪，治法亦各异。又如，同为䐔病，发于胸胁者多兼气郁，发于下肢者多为湿盛。这是一般规律，在诊断时还需四诊合参，才能更加准确，但如果忽略发病部位的重要意义，治疗就不会取得预期的效果。以上病因可以单独致病，也可以几种病因同时致病，甚至同一病人、同一疾病，在不同阶段，病因不同。如同一个石淋患者，在结石固定不移时，其病因可能是气滞血瘀；在结石移动时，其病因则可能是湿热下注。所以医者临床时，必须综合局部症状与全身症状进行全面的分析，才能审证求因。
 
 ## 第二节 发病机理
 
@@ -128,9 +128,9 @@
 
 1.气血壅结：由于外邪侵犯或脏腑结热，五志化火等原因，使人体循环不息的气血功能破坏，经络阻塞，而形成局部的气血凝滞，或蕴结于肌肉，或滞留于筋骨。气血蕴结，不通则痛，局部则见肿胀疼痛。若失治或误治，气血蕴结未得解除，正气尚盛则邪气郁久而从热化，局部遂可出现焮红、热痛等征象，此即阳证。如痈、疽、疔、疖、流注等证的发生，皆为这种病理变化的结果。若素体虚弱，正气不足，不能从热化；或肾虚骼空，阴邪乘袭；或脾胃虚弱，痰湿内生，与郁结之肝气相搏，留注筋骨，则局部不红不热，只有隐隐作痛或酸痛，局部硬结或漫肿；或经年累月慢慢化热，局部才微红微热，转向化脓阶段，此为阴证。如瘰疬、痰核、流痰等证，皆为这种病理变化的结果。
 
-2.热盛肉腐：不论是阳证还是阴证的疮疡，在发病初期不得消散者，病程或速或慢，病变皆继续发展。局部气血壅滞，不能疏通，愈久化热愈盛，遂使血肉腐败，酝酿液化而成脓。如《灵枢•痈疽》说，“营卫稽留于经脉之中，则血泣而不行；不行则卫气从之而不通，壅遏不得行，故热；大热不止，热胜则肉腐，肉腐则为脓”。这便是脓形成的机理，也是局部气血凝滞，进一步发展变化的病理过程。脓成熟到一定程度，局部皮肤亦被腐蚀破溃。于是由肿疡变为溃疡。
+2.热盛肉腐：不论是阳证还是阴证的疮疡，在发病初期不得消散者，病程或速或慢，病变皆继续发展。局部气血壅滞，不能疏通，愈久化热愈盛，遂使血肉腐败，酝酿液化而成脓。如《灵枢•痈疽》说，“营卫稽留于经脉之中，则血泣而不行；不行则卫气从之而不通，壅遏不得行，故热；大热不止，热胜则肉腐，肉腐则为脓。”这便是脓形成的机理，也是局部气血凝滞，进一步发展变化的病理过程。脓成熟到一定程度，局部皮肤亦被腐蚀破溃。于是由肿疡变为溃疡。
 
-3.生肌长皮：疮疡破溃之后，毒随脓泄，若脏腑正气恢复，气血充足，则腐肉脱落，新肉生长；长皮敛口，气血恢复运行而愈；若气血不足，则腐肉不脱，新肉生长缓慢，难于收敛。可见生肌收口，与脾胃功能正常，气血充沛有关。
+3.生肌长皮：疮疡破溃之后，毒随脓泄，若脏腑正气恢复，气血充足，则腐肉脱落，新肉生长，长皮敛口，气血恢复运行而愈；若气血不足，则腐肉不脱，新肉生长缓慢，难于收敛。可见生肌收口，与脾胃功能正常，气血充沛有关。
 
 4.毒邪走散，内攻脏腑：疔疮、有头疽等证，因毒邪鸱张，脏腑虚弱，气血不足，不胜防御，遂使毒邪走散，循经络，入营血，内攻脏腑。继而扰乱神明，出现神昏谵语等“走黄”或“内陷"的一系列危重证候，这是体表疮疡影响脏腑而发生病变的病理过程。
 
@@ -146,7 +146,7 @@
 
 2.六腑通降功能减低或丧失：这是上述病理变化发展的继续。六腑的功能在于饮食的摄入、消化、吸收和排泄。这一过程必须不断运行，不能停滞，故古人科学地概括为“六腑以通为用”。六腑气机不利则往往造成六腑梗阻不通。不通则出现剧烈的持续性腹痛，同时伴有严重的全身症状，如发烧、呕吐、便秘或黄疸等等。象肠结、胆石症、胆道蛔虫症、严重肠痈和石淋等病均有这类病理变化。
 
-3.湿热交阻：由于感受外邪，或素嗜酒肉肥甘，伤及脾胃，脾之运化水湿功能减退，造成湿热交阻，胆道不通，胆液外溢，熏染肌肤而发黄疸，如急性胆道感染、胆石症、急性胰腺炎、胆道蛔虫症等引起的黄疸均为这类病理变化。
+3.湿热交阻：由于感受外邪，或素嗜酒肉肥甘，伤及脾胃，脾之运化水湿功能减退，造成湿热交阻，胆道不通，胆液外溢，熏染肌肤而发黄疸。如急性胆道感染、胆石症、急性胰腺炎、胆道蛔虫症等引起的黄疸均为这类病理变化。
 
 4.风火相煽，横窜经脉：因火毒炽盛或气郁化火，阳气暴张，热胜生风，风火相煽，上升巅顶则昏厥，横穿脉络则抽搐，如肠痈重证、严重的肠结证后期抽搐，多为这种病机所致。又有因久病阴虚血亏，血不荣筋，虚风内动，则手足蠕动，瘈疭或振颤等，如部分卒腹痛后期抽搐，即属此种病机。还有外伤后因感受外风，入里侵内，导致抽搐，如破伤风等病。
 
@@ -176,7 +176,7 @@
 
 疾病的发生发展转归的过程，是邪正交争的过程。外科疾病虽然多发生于体表，但它的发生发展和转归也与脏腑、气血、经络密切相关。
 
-外科病发生与否，与正气的盛衰有密切关系。一般来说，阴平阳秘，脏腑功能正常，气血充盛，阳气卫外功能固密，即使外感六淫，或内伤七情也不一定发病。反之，则易于发病。正如《内经》所说：“正气存内，邪不可干”。《外科启玄》也说：“凡疮疡皆由五脏不和，六腑壅滞，则令经脉不通而生焉”。此即“有诸内而必形诸外”的道理。
+外科病发生与否，与正气的盛衰有密切关系。一般来说，阴平阳秘，脏腑功能正常，气血充盛，阳气卫外功能固密，即使外感六淫，或内伤七情也不一定发病。反之，则易于发病。正如《内经》所说：“正气存内，邪不可干。”《外科启玄》也说：“凡疮疡皆由五脏不和，六腑壅滞，则令经脉不通而生焉。”此即“有诸内而必形诸外”的道理。
 
 外科病的发展和传变也与正气密切相关。一般规律是气虚者患疮疡，难于发起破溃；血虚者患疮疡，难于生肌收口。气血充足者患疮疡，易于发起破溃，生肌长肉，愈合迅速，多为顺证。脏腑功能失调，气血不足者患疮疡，往往由于毒邪鸱张，侵入营血，内攻脏腑，扰乱神明，引动内风，出现谵语抽搐等一系列危重证候，成为“走黄”、“内陷”等证。另外，气血虚弱者患卒腹痛时，变症多、危症多、合并症多。而气血渐充，正气来复者，则能加速疾病康复。
 
