update ok/wk/wk06-1.6.0.0.0.md. 修改了错别字

--- a/ok/wk/wk06-1.6.0.0.0.md
+++ b/ok/wk/wk06-1.6.0.0.0.md
@@ -88,7 +88,8 @@
 
 〔应用例案〕
 
-案一：陈XX，42岁，农民，1976年3月来诊。患者左腿胫骨侧有一约10×3平方厘米大的脓肿，已溃烂，肉色紫黑，脓血淋漓，略有臭味。自诉患病已五年之久，初起时，腿部肿块疼痛，寒热往来，未经医治。半月后，因肿块剧痛，不能行走，乃求医诊治。治疗两月，肿块溃烂，且出朽骨两片，溃烂处至今不愈。虽更医数人，终无效果。三个月前赴某医院检查，确诊为骨髓炎（已溃型），动员住院截肢。本人拒绝手术，遂求中医治疗。
+案一：陈XX，42岁，农民，1976年3月来诊。
+患者左腿胫骨侧有一约10×3平方厘米大的脓肿，已溃烂，肉色紫黑，脓血淋漓，略有臭味。自诉患病已五年之久，初起时，腿部肿块疼痛，寒热往来，未经医治。半月后，因肿块剧痛，不能行走，乃求医诊治。治疗两月，肿块溃烂，且出朽骨两片，溃烂处至今不愈。虽更医数人，终无效果。三个月前赴某医院检查，确诊为骨髓炎（已溃型），动员住院截肢。本人拒绝手术，遂求中医治疗。
 
 患者形容憔悴，精神不振，身体消瘦，行动依杖；舌淡苔白；脉沉弱无力。脉证合参，系附骨疽，先用托里散加味排脓生肌。处方如下：
 
