--- a/ok/gk/gk05-0.3.13.0.0.md
+++ b/ok/gk/gk05-0.3.13.0.0.md
@@ -16,7 +16,7 @@
 
 1.手法复位：无移位的裂纹骨折，不需整复，仅用竹片或硬纸壳包扎固定。有移位的，在麻醉下，患者平卧，一助手固定小腿下部，术者一手将骨折远端对抗拔伸3〜5分钟，一手纠正跖骨成角和重迭，施行挤按提等手法，使骨折整复。若跖骨骨折合并跗跖关节脱位，应先整复脱位，在拔伸牵引下，施行顶推提挤按法使脱位整复，后行整复骨干骨折，整复完成后，用两手掌在跖跗关节外由背跖两侧相对挤按，再将足的内外两侧相对挤按，使完全复位。
 
-2.固定；复位后在维持牵引下，先敷外伤膏，绕绷带顺跖骨间安放分骨垫，用胶布二道固定，安放扇状小竹帘。此帘要求顺跖骨方向，其压力才平均，竹帘放妥后，用二道胶布固定，再用绷带松缠，穿上木板鞋，两侧木板再用布带固定结扎（图5—80）。
+2.固定：复位后在维持牵引下，先敷外伤膏，绕绷带顺跖骨间安放分骨垫，用胶布二道固定，安放扇状小竹帘。此帘要求顺跖骨方向，其压力才平均，竹帘放妥后，用二道胶布固定，再用绷带松缠，穿上木板鞋，两侧木板再用布带固定结扎（图5—80）。
 
 <img src="img\5-80.jpg" style="zoom:70%;" />
 
