--- a/ok/bc/bc03-0.1.2.0.0.md
+++ b/ok/bc/bc03-0.1.2.0.0.md
@@ -1,7 +1,6 @@
 ### 知母 
 
-**〔原文〕辛苦寒滑。上清肺金而泻火，**泻胃热，膀胱邪热，肾命相火。 **下润肾燥而滋阴,入二经气分**。黄柏入二经血分，故二药必相须而行。**消痰定嗽，止渴安胎。**莫非清火之用。**治伤寒烦热，蓐劳**(1)产劳。**骨蒸**，退有汗之骨
-蒸,**燥渴虚烦,久疟下痢**。治嗽者，清肺火也；治渴者，清胃热也；退骨蒸者，泻肾火也。**利二便，消浮肿**。小便利则肿消。东垣曰：热在上焦气分，结秘而渴，乃肺中伏热，不能生水，膀胱绝其化源，宜用渗湿之药，泻火清金，滋水之化源、。热在下焦血分，便闭而不渴，乃真水不足，膀胱干涸，无阴则阳无以化。宜用黄柏、知母大苦寒之药，滋肾与膀胱之阴， 而阳自化，小便自通。丹溪曰：小便不通，.有热有湿，有气结于下，宣清、宜燥、宜升。又有隔二隔三之治。如肺不燥，但膀胱热，宜泻膀胱，此正治;如因肺热，不能生水，则清肺，此隔二之治；如因脾湿不运，而精不上升，故肺不能生水，则燥胃健脾，此隔三之治。泻膀胱，黄柏、知母之类；清肺，车前、茯苓之类；燥脾，二术之类。昂按：凡病皆有隔二隔三之治，不独便闭也。**然苦寒伤胃而滑肠，多服令人泻**。李士材曰：苦寒肃杀，非长养万物者也。世以其滋阴，施之虚损之人，则如水益深矣，特表出以为戒。**得酒良。上行酒浸，下行盐水拌。忌铁**。
+**〔原文〕辛苦寒滑。上清肺金而泻火，**<small>泻胃热，膀胱邪热，肾命相火。</small>**下润肾燥而滋阴,入二经气分。**<small>黄柏入二经血分，故二药必相须而行。</small>**消痰定嗽，止渴安胎。**<small>莫非清火之用。</small>**治伤寒烦热，蓐劳**(1)<small>产劳。</small>**骨蒸，**<small>退有汗之骨蒸,</small>**燥渴虚烦,久疟下痢。**<small>治嗽者，清肺火也；治渴者，清胃热也；退骨蒸者，泻肾火也。</small>**利二便，消浮肿。**<small>小便利则肿消。东垣曰：热在上焦气分，结秘而渴，乃肺中伏热，不能生水，膀胱绝其化源，宜用渗湿之药，泻火清金，滋水之化源。热在下焦血分，便闭而不渴，乃真水不足，膀胱干涸，无阴则阳无以化。宜用黄柏、知母大苦寒之药，滋肾与膀胱之阴， 而阳自化，小便自通。丹溪曰：小便不通，.有热有湿，有气结于下，宣清、宜燥、宜升。又有隔二隔三之治。如肺不燥，但膀胱热，宜泻膀胱，此正治;如因肺热，不能生水，则清肺，此隔二之治；如因脾湿不运，而精不上升，故肺不能生水，则燥胃健脾，此隔三之治。泻膀胱，黄柏、知母之类；清肺，车前、茯苓之类；燥脾，二术之类。昂按：凡病皆有隔二隔三之治，不独便闭也。</small>**然苦寒伤胃而滑肠，多服令人泻。**<small>李士材曰：苦寒肃杀，非长养万物者也。世以其滋阴，施之虚损之人，则如水益深矣，特表出以为戒。</small>**得酒良。上行酒浸，下行盐水拌。忌铁**。
 
 【讲解】  (1)蓐劳：病名。多因产后气血耗伤，调理失宜，感受风寒，或忧劳思虑等所致。常见虚贏喘乏，寒热头痛自汗，肢体倦怠等证。
 
