--- a/ok/bc/bc03-0.1.2.0.0.md
+++ b/ok/bc/bc03-0.1.2.0.0.md
@@ -5,7 +5,7 @@
 
 【讲解】  (1)蓐劳：病名。多因产后气血耗伤，调理失宜，感受风寒，或忧劳思虑等所致。常见虚贏喘乏，寒热头痛自汗，肢体倦怠等证。
 
-**知母以清润为特点，既能清火，又善滋阴**。为百合科多年生草本植物知母的根茎。药材有两种，剥去栓皮者，称光知母，品质较佳；带皮的干燥拫茎，名毛知母，品质次之。临床多用前者。切片，生用或盐水炒用。
+**知母以清润为特点，既能清火，又善滋阴**。为百合科多年生草本植物知母的根茎。药材有两种，剥去栓皮者，称光知母，品质较佳；带皮的干燥根茎，名毛知母，品质次之。临床多用前者。切片，生用或盐水炒用。
 
 本品苦甘寒，质柔润。入肺、胃、肾三经。苦寒能清热、泻火，甘寒质润能滋阴润燥，故以清润为专长。上清肺，中凉胃，下泻相火，而滋肺胃肾之阴。凡燥热伤阴，不论实证虚证，均可应用。用治温热病，壮热烦渴，肺胃燥热证及阴虚火旺之潮热骨蒸、消渴等。然苦寒清润，有伤胃作泻之虑。阴虚便秘者，甚为适合。若脾虚便溏或寒饮咳嗽者，则非所宜。   
 
