--- a/ok/fk/fk0zl03-0.1.0.0.0.md
+++ b/ok/fk/fk0zl03-0.1.0.0.0.md
@@ -5,12 +5,11 @@
 一、外因
 
 风、寒、热、湿、暑、燥等外邪袭人，均可罹病，妇女以血为本，其寒、热、湿之邪尤易与血相搏而导致妇科疾病的发生。
-
 兹分别论述于下。
 
 （一）寒邪
 
-寒为阴邪，主收敛，凝涩，抑遏阳气，阻寒脉道，影响气血之运行，而导致妇科疾病发生。寒邪从肌肤皮毛而入者，此为外寒，如冒雨涉水，或气候骤冷，严寒衣单，或值产褥期，行经期，血室正开，寒邪由肌表或由阴部上行客于胞宫，影响冲任，影响胞宫、胞脉、胞络的正常功能，均可导致妇科疾病的发生。如月经失调、痛经、闭经，带下增多、胎动不安、堕胎小产、产后发热、产后身疼等。
+寒为阴邪，主收敛，凝涩，抑遏阳气，阻塞脉道，影响气血之运行，而导致妇科疾病发生。寒邪从肌肤皮毛而入者，此为外寒，如冒雨涉水，或气候骤冷，严寒衣单，或值产褥期，行经期，血室正开，寒邪由肌表或由阴部上行客于胞宫，影响冲任，影响胞宫、胞脉、胞络的正常功能，均可导致妇科疾病的发生。如月经失调、痛经、闭经，带下增多、胎动不安、堕胎小产、产后发热、产后身疼等。
 
 （二）热邪
 
