--- a/ok/qs/qs04.md
+++ b/ok/qs/qs04.md
@@ -374,11 +374,11 @@
 
 它的主干（直行脉）：从缺盆下向腋上，沿胸例，过季肋到章门穴，向下会合于髋关节部。由此向下，沿大腿外侧，出膝外侧，下向腓骨头前，直下到腓骨下段，下出外踝之前，沿足背进入第四趾外侧。
 
-它的支脉：从足背分出，进入大趾趾缝问，沿笫一、二跖骨间，出趾端，回转来通过爪甲，出于趾背毫毛部，接足厥阴肝经。
+它的支脉：从足背分出，进入大趾趾缝间，沿笫一、二跖骨间，出趾端，回转来通过爪甲，出于趾背毫毛部，接足厥阴肝经。
 
-此经多气少血。有了异常变动就表现为口苦，频频叹气，胸胁痛不能转侧，小腿外倒热，面色灰喑，如蒙灰尘，身体没有脂润光译。
+此经多气少血。有了异常变动就表现为口苦，频频叹气，胸胁痛不能转侧，小腿外侧热，面色灰喑，如蒙灰尘，身体没有脂润光译。
 
-本经腧穴能主治有关“骨”方面所发生的病症，如头疝，颞痛，眼睛外眦痛，缺盆中肿痛，腋下肿，如“马刀挟癭”等症，自汗出，战栗发冷，疟疾；胸部、胁肋、大腿及膝部外侧以至小腿腓骨下段“绝骨”、外踝的前面、以及各骨节都酸痛。小趾侧的次趾（足无名趾）不好运用。
+本经腧穴能主治有关“骨”方面所发生的病症，如头痛，颞痛，眼睛外眦痛，缺盆中肿痛，腋下肿，如“马刀挟癭”等症，自汗出，战栗发冷，疟疾；胸部、胁肋、大腿及膝部外侧以至小腿腓骨下段“绝骨”、外踝的前面、以及各骨节都酸痛。小趾侧的次趾（足无名趾）不好运用。
 
 **12.足厥阴肝经歌**
 
@@ -398,17 +398,17 @@
 
 **是经血多而气少，腰痛俯仰难为工，**
 
-**妇少腹肿男㿉疝，嗌千脱色面尘蒙，**
+**妇少腹肿男㿉疝，嗌干脱色面尘蒙，**
 
 **胸满呕逆及飧泄，狐疝遗尿或闭癃。**
 
 **毛际丛**    足大趾背面弟一节多毛处，又称“三毛”。
 
-**阴器**    指生殖器。**颃**hang，读杭，指颈部。**颡** sang，读嗓。指额部。颃嗓即上腭处与鼻咽腔部位；又称“咽颡”。
+**阴器**    指生殖器。**颃**háng，读杭，指颈部。**颡** sǎng，读嗓。指额部。颃嗓即上腭处与鼻咽腔部位；又称“咽颡”。
 
 **溃**kui，读匮。溃疝为七之一，发病时阴囊肿痛下坠。
 
-**脱色面尘**   神色晦暗，面垢如尘。**飧**sun，读孙。大使稀薄，完谷不化叫飧泄。**狐疝**   为七在之一，其证为阴囊疝气时上时下，象狐之出入无常。**闭癃**  指小泛闭涩不利。
+**脱色面尘**   神色晦暗，面垢如尘。**飧**sūn，读孙。大使稀薄，完谷不化叫飧泄。**狐疝**   为七在之一，其证为阴囊疝气时上时下，象狐之出入无常。**闭癃**  指小泛闭涩不利。
 
 足厥阴肝经：从大趾背毫毛部开始，向上沿着足背内侧，离内踝一寸，上行小腿内侧，离内踝八寸处交出足太阴脾经之后，上膝腘内侧，沿着大腿内侧，进入阴毛中，环绕阴部，至小腹，夹胃旁边，属于肝，络于胆；向上通过膈肌，分布胁肋部，沿气管之后，向上进入颃颡（喉头部），连接目系（眼球后的脉络联系），上行出于额部，与督脉交会于头顶。
 
@@ -470,7 +470,7 @@
 
 **任病男疝女瘕带，冲病里急气逆冲。**
 
-**篡** chan，读帘，即会阴部，在肛门与阴器的中间。
+**篡** cuàn，读帘，即会阴部，在肛门与阴器的中间。
 
 **廷孔** 指阴户。或指溺孔，尿道口。 **巨阳** 指足太阳。
 
@@ -482,9 +482,9 @@
 
 冲脉有病就会腹中急痛，气逆上冲心等。
 
-**4.蹻脉歌**
+**4.𫏋脉歌**
 
-**蹻乃少阴之别脉，起于然骨至内踝，**
+**𫏋乃少阴之别脉，起于然骨至内踝，**
 
 **直上阴股入阴间，上循胸入缺盆过，**
 
@@ -492,5 +492,5 @@
 
 **此皆灵素说奇经，带及二维未说破。**
 
-蹻脉有阴蹻、阳蹻之分。阴蹻脉是足少阴肾经的别脉，起于然骨（舟骨粗隆下）穴之后的照海穴，上行于内踝上方，向上沿大腿的内侧进入前阴部，然后沿着腹部上入胸内，入于缺盆，向上出人迎穴的前面，到达鼻旁，连属于目内眦，与足太阳经、阳蹻脉会合而上行。阳蹻脉也起于足后跟外的申脉穴，沿着足外踝向大腿外侧上行，上至目内眦与阴蹻脉相会合。以上是《灵枢》《索问》中关于奇经八脉的一些叙述，还有带脉、阴维、阳维三脉未加叙述，可参阅《难经•二十八难》。（詹永康）
+𫏋脉有阴蹻、阳𫏋之分。阴𫏋脉是足少阴肾经的别脉，起于然骨（舟骨粗隆下）穴之后的照海穴，上行于内踝上方，向上沿大腿的内侧进入前阴部，然后沿着腹部上入胸内，入于缺盆，向上出人迎穴的前面，到达鼻旁，连属于目内眦，与足太阳经、阳𫏋脉会合而上行。阳𫏋脉也起于足后跟外的申脉穴，沿着足外踝向大腿外侧上行，上至目内眦与阴𫏋脉相会合。以上是《灵枢》《索问》中关于奇经八脉的一些叙述，还有带脉、阴维、阳维三脉未加叙述，可参阅《难经•二十八难》。（詹永康）
 
