update ok/fk/fk0zl04-0.1.0.0.0.md. 1.倘未初潮　修改为：尚未初潮 2.气珠　修改为：气味 3.皖白　修改为：㿠白 4.两额　修改为：两颧 5.邪热轻　修改为：邪热尚轻 6.湿热蛮盛　修改为：湿热壅盛 7.若四股　修改为：若四肢 8.有媭毛　修改为：有须毛
疑似：未改
1.乳房平垣　疑为：乳房平坦［原文在45页，pdf上：乳房平垣，疑为：乳房平坦］

--- a/ok/fk/fk0zl04-0.1.0.0.0.md
+++ b/ok/fk/fk0zl04-0.1.0.0.0.md
@@ -8,7 +8,7 @@
 
 （一）问年龄
 
-因年龄不同，生理上有差异，而表现之病理特点则各异。治疗也各有侧重。如青春期常因肾气未充，而多见月经病。治疗侧重于补肾，固肾。如逾十八岁（周岁）月经倘未初潮者，则为原发性闭经，应进一步了解其致病原因。给予正确治疗；中年妇女因于胎产，哺乳，操劳过度，数伤于血，阴血不足，阳气易耗，肝肾失养，常见月经不调、胎前产后诸病，诊断治疗侧重于肝肾；老年妇女，绝经期为肾气渐衰，脾胃虚乏，致阴阳失于调达，多导致月经紊乱，绝经期诸证，至于妇科肿瘤的发生，往往与年龄有关。因此，问年龄，在诊断妇科疾病中有一定的参考价值。
+因年龄不同，生理上有差异，而表现之病理特点则各异。治疗也各有侧重。如青春期常因肾气未充，而多见月经病。治疗侧重于补肾，固肾。如逾十八岁（周岁）月经尚未初潮者，则为原发性闭经，应进一步了解其致病原因。给予正确治疗；中年妇女因于胎产，哺乳，操劳过度，数伤于血，阴血不足，阳气易耗，肝肾失养，常见月经不调、胎前产后诸病，诊断治疗侧重于肝肾；老年妇女，绝经期为肾气渐衰，脾胃虚乏，致阴阳失于调达，多导致月经紊乱，绝经期诸证，至于妇科肿瘤的发生，往往与年龄有关。因此，问年龄，在诊断妇科疾病中有一定的参考价值。
 
 （二）问现病史
 
@@ -32,7 +32,7 @@
 
 （六）问妊娠及产后
 
-妊娠需问月经停止日期，晨起有无恶心，浮肿，胎动及阴道流血，小腹疼痛及腰痠等情况；产后需问恶露的量、色、质及气珠。并问有否发热、汗出、腹痛等情况。
+妊娠需问月经停止日期，晨起有无恶心，浮肿，胎动及阴道流血，小腹疼痛及腰痠等情况；产后需问恶露的量、色、质及气味。并问有否发热、汗出、腹痛等情况。
 
 （七）问前后二阴
 
@@ -56,7 +56,7 @@
 
 （一）望面色
 
-面部色泽的变化，可以反映脏腑、气血的盛衰。前人有“望而知之，谓之神。”故望诊在妇科疾病的断诊中有很大的作用。若面色皖白而体胖虚浮，多为气虚夹痰，可见于月经过多、月经先期、带下、不孕等症；面色萎黄，身体消瘦，爪甲色淡，多为营血欠充，化源不足，每见于月经后期、量少、闭经、不孕等疾；面色青为肝郁或气滞，多见月经先后无定期、痛经等症；面色青紫，多属瘀血停滞，常见于痛经、闭经、癥瘕等。面色晦暗，颊额部有黯黑斑，或兼目眶黯黑者，乃肾气虚衰之象，可见于闭经、崩漏、胎动不安、滑胎、不孕、带下等病；面色浮红，两额赤者，为阴虚火旺之征，可见于阴虚血热之闭经、月经失调、绝经前后诸证等。
+面部色泽的变化，可以反映脏腑、气血的盛衰。前人有“望而知之，谓之神。”故望诊在妇科疾病的断诊中有很大的作用。若面色㿠白而体胖虚浮，多为气虚夹痰，可见于月经过多、月经先期、带下、不孕等症；面色萎黄，身体消瘦，爪甲色淡，多为营血欠充，化源不足，每见于月经后期、量少、闭经、不孕等疾；面色青为肝郁或气滞，多见月经先后无定期、痛经等症；面色青紫，多属瘀血停滞，常见于痛经、闭经、癥瘕等。面色晦暗，颊额部有黯黑斑，或兼目眶黯黑者，乃肾气虚衰之象，可见于闭经、崩漏、胎动不安、滑胎、不孕、带下等病；面色浮红，两颧赤者，为阴虚火旺之征，可见于阴虚血热之闭经、月经失调、绝经前后诸证等。
 
 （二）望舌质、舌苔
 
@@ -64,7 +64,7 @@
 
 1.舌质：舌质淡红，为虚、为寒，每见月经后期，经量过少、闭经、崩漏、不孕等；舌淡，体胖质嫩，或有齿痕者，多因气血两虚，脾阳虚损，临床可见月经先期、量多、崩漏日久、经前泄泻、经前浮肿、经闭不行、妊娠子肿等；舌质深红，为血热，多见月经先期、经量过多、崩漏、经行吐衄等；舌尖红赤者，乃心火偏旺，多见于月经过多等；舌色紫黯或有瘀点瘀斑，多属瘀血阻滞，多见于痛经、闭经、癥瘕等。
 
-2.舌苔：舌苔之颜色，厚薄和润燥，是察知病变性质、邪气盛衰、津液损耗之有无的重要方法。但临床中舌质、舌苔应结合分析。一般舌苔薄者，邪较轻，舌苔厚者，邪较重；苔薄微黄为邪热轻，苔厚深黄，内热炽盛，临床均可见月经先期、量多、崩漏等证；黄厚而腻为湿热蛮盛，临床可见带下色黄、阴痒阴肿等；苔白属寒，白润为寒湿，证见月经后期、量少、痛经、带多色白等；灰黑润滑，系阳虚夹寒，可见月经先期、淋漓不断、痛经、闭经、不孕症等。
+2.舌苔：舌苔之颜色，厚薄和润燥，是察知病变性质、邪气盛衰、津液损耗之有无的重要方法。但临床中舌质、舌苔应结合分析。一般舌苔薄者，邪较轻，舌苔厚者，邪较重；苔薄微黄为邪热尚轻，苔厚深黄，内热炽盛，临床均可见月经先期、量多、崩漏等证；黄厚而腻为湿热壅盛，临床可见带下色黄、阴痒阴肿等；苔白属寒，白润为寒湿，证见月经后期、量少、痛经、带多色白等；灰黑润滑，系阳虚夹寒，可见月经先期、淋漓不断、痛经、闭经、不孕症等。
 
 （三）望形态
 
@@ -74,7 +74,7 @@
 
 1.皮肤：掌腕与手臂屈侧肌肤，滑润光泽，为津液气血充沛之征；枯燥干涩则系津血亏损之象。若皮肤粗糙而干，呈褐色鳞甲状者（肌肤甲错），为有瘀血。临床可见月经量少、闭经、不孕等。
 
-2.毛发：毛发润泽，疏密适中，为肾气盛，阴血充足；若毛发脱落，阴毛稀疏，乃肾亏，精血不足，可见肾虚闭经、量少、产后大出血，血枯经闭，宫寒不孕等；若四股或外阴多毛，或呈男性分布，甚至唇口周围有媭毛或乳房长毛者，多属肾虚痰湿之证，可见月经失调、或闭经等。
+2.毛发：毛发润泽，疏密适中，为肾气盛，阴血充足；若毛发脱落，阴毛稀疏，乃肾亏，精血不足，可见肾虚闭经、量少、产后大出血，血枯经闭，宫寒不孕等；若四股或外阴多毛，或呈男性分布，甚至唇口周围有须毛或乳房长毛者，多属肾虚痰湿之证，可见月经失调、或闭经等。
 
 3.乳房：月经初潮后，乳房逐渐丰满，妊娠后乳房渐大，乳晕扩大而呈黯褐色。若孕数月乳房缩小，多为胎萎不长，或胎死腹中；产后乳汁少，无胀无痛，为血虚，若兼胀痛心烦，为肝郁；产后乳房红肿，胀硬，欣热，疼痛，乳汁稠浓或少，为蒸乳成痈；若未产乳汁自出，称乳泣，或因气虚，或因郁热，须结合临床辨证；若非妊娠产乳而乳房泌汁者，见月经闭止，多为脾肾亏损，肝气逆乱，肝木乘脾，胃气不固所致。但要结合西医检查，排除一些恶性疾患。
 
