update ok/fk/fk0zl04-0.2.0.0.0.md. 1.证侯性质　修改为：证候性质 2.全身证状，　修改为：全身证状： 3.妇科特征，　修改为：妇科特征： 4.肝病辩证　修改为：肝病辨证 5.肝郁气滞，　修改为：肝郁气滞： 6.全身证状，　修改为：全身证状： 7.子病　修改为：子痫 8.抽摘　修改为：抽搐 9.证侯　修改为：证候 10.崩漏胎动不安。　修改为：崩漏、胎动不安。 11.火便稀薄　修改为：大便稀薄

--- a/ok/fk/fk0zl04-0.2.0.0.0.md
+++ b/ok/fk/fk0zl04-0.2.0.0.0.md
@@ -1,6 +1,6 @@
 ## 第二节辨证要点
 
-中医妇科辨证，是根据经、带、胎、产的临床特征，结合全身症状，按照阴、阳、表、里、寒、热、虚、实八纲辩证的原则，确定其证侯性质。对于妇科之辨证，必须从局部到整体进行全面综合分析，才能辨别脏腑、气血的病变性质，为临床施治提供可靠的依据。
+中医妇科辨证，是根据经、带、胎、产的临床特征，结合全身症状，按照阴、阳、表、里、寒、热、虚、实八纲辩证的原则，确定其证候性质。对于妇科之辨证，必须从局部到整体进行全面综合分析，才能辨别脏腑、气血的病变性质，为临床施治提供可靠的依据。
 
 一、脏腑辨证
 
@@ -10,7 +10,7 @@
 
 1.肾气虚：妇科特征，月经先后无定期，或后期，经量或多或少，量少色淡、闭经、崩漏、胎动不安、滑胎、不孕、阴挺。
 
-全身证状，腰痠腿软，头晕耳鸣，小便频数，精神不振，面色晦暗。
+全身证状：腰痠腿软，头晕耳鸣，小便频数，精神不振，面色晦暗。
 
 舌、脉、舌质淡红，苔薄白，脉沉弱或沉细。
 
@@ -30,33 +30,33 @@
 
 （二）肝病辩证：
 
-1·肝郁气滞，妇科特征：月经紊乱、经量多少不一、血色暗红、经行不畅、经闭、痛经、不孕、缺乳。
+1·肝郁气滞：妇科特征：月经紊乱、经量多少不一、血色暗红、经行不畅、经闭、痛经、不孕、缺乳。
 
 全身症状：胸胁乳房胀痛，胸闷不舒，小腹胀痛，时欲太息，嗳气，食欲不振。
 
 舌、脉：舌暗或常，苔薄白，脉弦。
 
-2.肝郁化火：妇科特征，月经先期、量多、色紫红、崩漏、经行吐衄。
+2.肝郁化火：妇科特征：月经先期、量多、色紫红、崩漏、经行吐衄。
 
-全身症状，头晕，头痛，目眩，耳鸣，目赤肿痛。口苦而干，烦躁易怒，胁乳胀痛。
+全身症状：头晕，头痛，目眩，耳鸣，目赤肿痛。口苦而干，烦躁易怒，胁乳胀痛。
 
 舌脉：舌质红、苔黄腻，脉弦而数。
 
-3.肝经湿热：妇科特征，带下量多、色白或黄白相兼、或兼赤、质稠、秽臭、阴痒、阴浊。
+3.肝经湿热：妇科特征：带下量多、色白或黄白相兼、或兼赤、质稠、秽臭、阴痒、阴浊。
 
 全身症状：胸闷胁痛，心烦易怒，大便干燥，小便黄赤，口苦咽干。
 
 舌、脉：舌质红，苔黄腻。脉滑而数，或弦数有力。
 
-4.肝阳上亢：妇科特征，妊娠眩晕、经绝前后诸证等。
+4.肝阳上亢：妇科特征：妊娠眩晕、经绝前后诸证等。
 
 全身症状：头晕头痛，目赤眼花，耳鸣耳聋，失眠多梦，烦满欲呕，四肢麻木，手足心热。
 
 舌、脉：舌质红、苔薄黄或少苔，脉弦细，或弦而有力。
 
-5.肝风内动：妇科特征，妊娠子病、产后发痉。
+5.肝风内动：妇科特征：妊娠子痫、产后发痉。
 
-全身症状：头晕头痛，目眩花，突然昏厥，不省人事，手足抽摘，角弓反张。
+全身症状：头晕头痛，目眩花，突然昏厥，不省人事，手足抽搐，角弓反张。
 
 舌、脉：舌红或绛，无苔或花剥苔；脉弦细或弦数。
 
@@ -76,13 +76,13 @@
 
 舌、脉：舌质淡、苔薄白、脉缓。
 
-3.脾阳虚：妇科特征，经行泻泄、带下、子肿，不孕。.
+3.脾阳虚：妇科特征：经行泻泄、带下、子肿，不孕。.
 
 全身症状：面色㿠白，倦怠无力，畏寒肢冷，甚则浮肿，食欲不振，腹部胀满，大便溏泄。
 
 舌、脉：舌质淡，胖嫩，苔白滑，脉缓滑无力。
 
-4.脾虚湿困：妇科特征，经行后期、量少、经行泄泻、经闭、恶阻、不孕、带下增多、色黄或白、妊娠肿胀。
+4.脾虚湿困：妇科特征：经行后期、量少、经行泄泻、经闭、恶阻、不孕、带下增多、色黄或白、妊娠肿胀。
 
 全身症状：形体虚胖，头晕且重，心悸气短，口中淡腻，脘闷纳呆，四肢乏力。
 
@@ -96,7 +96,7 @@
 
 二、气血辨证
 
-气血辨证是审察在气血失调的病因变化中，出现的各种性质不同之证侯类型。
+气血辨证是审察在气血失调的病因变化中，出现的各种性质不同之证候类型。
 
 （一）气病辨证
 
@@ -112,7 +112,7 @@
 
 舌、脉：舌质正常，或暗、苔薄白。脉弦。
 
-3·气逆：妇科特征，经行吐衄、妊娠呕吐、乳汁自出。
+3·气逆：妇科特征：经行吐衄、妊娠呕吐、乳汁自出。
 
 全身症状：头痛，胸闷，胁肋胀痛，嗳气呃逆，妊娠眩晕。
 
@@ -120,7 +120,7 @@
 
 （二）血病辨证
 
-1.血虚：妇科特征，月经后期、量少、色淡、质稀、经闭、经后腹痛、胎动不安、不孕、缺乳。
+1.血虚：妇科特征：月经后期、量少、色淡、质稀、经闭、经后腹痛、胎动不安、不孕、缺乳。
 
 全身症状：面色萎黄，指甲色淡，唇色淡红，皮肤不润，眩晕，心悸少寐，疲乏无力，肢端麻木。
 
@@ -140,7 +140,7 @@
 
 舌、脉：舌红或绛，苔黄干糙，脉滑数或洪大。
 
-（2）虚热：妇科特征，月经先期、色鲜红、量少或崩漏胎动不安。
+（2）虚热：妇科特征：月经先期、色鲜红、量少或崩漏、胎动不安。
 
 全身症状：两颧潮红，低热不退，或午后潮热，五心烦热，少寐多梦，盗汗咽干。
 
@@ -154,9 +154,9 @@
 
 舌、脉：舌黯苔白，脉沉紧。
 
-（2）虚寒：妇科特征，经行后期、量少色淡、或如咖啡痛经、带下清冷、不孕。
+（2）虚寒：妇科特征：经行后期、量少色淡、或如咖啡痛经、带下清冷、不孕。
 
-全身症状：面色少华，腰痠背痛，腹冷如扇，小便清长。火便稀薄，腹痛绵绵。
+全身症状：面色少华，腰痠背痛，腹冷如扇，小便清长。大便稀薄，腹痛绵绵。
 
 舌、脉：舌质淡，苔白润，脉沉迟无力。
 
