--- a/ok/fk/fk0zl06-0.1.0.0.0.md
+++ b/ok/fk/fk0zl06-0.1.0.0.0.md
@@ -1,8 +1,8 @@
 ## 第一节 经期摄生
 
-妇女在月经期，由于盆腔充血，血室正开，邪气易于入侵，兼之经期失血，气相对有余、故情绪易于激动等。若调摄不慎，极易导致某些生殖系统疾病。如遭受凉恐，过度疲劳，可引起月经失调，闭经、癥瘕等证；如经期房事，易损伤冲任，导致崩漏、带下、月经失调；逐期血室正开、不注意卫生，可导致宫腔和盆腔组织之炎症。因此，在月经期需注意以下几点：
+妇女在月经期，由于盆腔充血，血室正开，邪气易于入侵，兼之经期失血，气相对有余、故情绪易于激动等。若调摄不慎，极易导致某些生殖系统疾病。如遭受惊恐，过度疲劳，可引起月经失调，闭经、癥瘕等证；如经期房事，易损伤冲任，导致崩漏、带下、月经失调；逐期血室正开、不注意卫生，可导致宫腔和盆腔组织之炎症。因此，在月经期需注意以下几点：
 
-（1）月经期应尽量避免精神刺激和过度疲劳（避免剧烈运动和重体力劳动）；以防盆腔过度充血。农村妇女经期尽量避免下水劳动。
+（1）月经期应尽量避免精神刺激和过度疲劳（避免剧烈运动和重体力劳动），以防盆腔过度充血。农村妇女经期尽量避免下水劳动。
 
 （2）每日至少清洁外阴一次，月经带要勤洗勤换，并在日光下晒干，不宜放在阴暗处，以达消毒之目的。用纸要干净、柔软，易吸水，以免擦伤皮肤。
 
